Initial Vet Page upload with medication drop down and pet column

--- a/Capstone_1/TechHW_4_SDimitriadis/TechHW_4_SDimitriadis.csproj
+++ b/Capstone_1/TechHW_4_SDimitriadis/TechHW_4_SDimitriadis.csproj
@@ -67,7 +67,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="css\stylingsteve.css" />
     <Content Include="Default.aspx" />
+    <Content Include="images\African-Grey.jpg" />
+    <Content Include="images\cat.jpg" />
+    <Content Include="images\churro.jpg" />
+    <Content Include="images\remi.jpg" />
+    <Content Include="images\vet-logo.png" />
     <Content Include="PageThree.aspx" />
     <Content Include="PageTwo.aspx" />
     <Content Include="Web.config" />
